conformance/tests/httproute-retry-connection-error.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retries-connection-error
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /retry-on-connection-errors
      retry:
        # attempts set intentionally high, so that a test run is very unlikely to miss the healthy backend
        attempts: 100
      backendRefs:
        - name: infra-backend-connection-error
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-connection-error
  namespace: gateway-conformance-infra
spec:
  selector:
    app: infra-backend-connection-error
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-backend-connection-error-broken
  namespace: gateway-conformance-infra
  labels:
    app: infra-backend-connection-error
    variant: broken
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-backend-connection-error
      variant: broken
  template:
    metadata:
      labels:
        app: infra-backend-connection-error
        variant: broken
    spec:
      containers:
        - name: infra-backend-connection-error
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.2.0
          imagePullPolicy: IfNotPresent
          env:
            - name: TCP_ECHO_SERVER
              value: "1"
            - name: TCP_PORT
              value: "3333" # does not match service port
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-backend-connection-error-healthy
  namespace: gateway-conformance-infra
  labels:
    app: infra-backend-connection-error
    variant: healthy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-backend-connection-error
      variant: healthy
  template:
    metadata:
      labels:
        app: infra-backend-connection-error
        variant: healthy
    spec:
      containers:
        - name: infra-backend-connection-error
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.2.0
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          resources:
            requests:
              cpu: 10m
